# gong-mcp

./: .dockerignore  .gitignore  .mcp.dist.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  claude_desktop_config.example.json
.claude/: settings.json
.claude/agents/: mcp-best-practices-consultant.md
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust-ci.yml
src/: lib.rs  main.rs
